--- a/examples/index.html
+++ b/examples/index.html
@@ -1469,7 +1469,7 @@ video {
                   <div class="flex w-full justify-between space-x-1 p-6 pb-4">
                     <div class="flex-1 truncate">
                       <div class="flex items-center space-x-3">
-                        <h3 class="truncate text-sm font-medium text-gray-900">Orders Latest</h3>
+                        <h3 class="truncate text-sm font-medium text-gray-900">Orders Latest (Nested)</h3>
                       </div>
                       <div class="flex flex-wrap mt-1 text-sm text-gray-500 gap-1">
                         
@@ -1573,7 +1573,7 @@ Orders with their line items are in their current state (no history included).
       </div>
 
       <div class="mt-6 text-sm text-gray-400">
-        Created at 29 Apr 2024 19:39:55 UTC with <a href="https://cli.datacontract.com" class="text-gray-400 hover:text-gray-500">Data Contract CLI</a> v0.10.1
+        Created at 29 Apr 2024 19:42:42 UTC with <a href="https://cli.datacontract.com" class="text-gray-400 hover:text-gray-500">Data Contract CLI</a> v0.10.1
       </div>
 
     </div>
