--- a/examples/muellimperium/datacontract.html
+++ b/examples/muellimperium/datacontract.html
@@ -874,6 +874,11 @@ video {
        column-gap: 1rem;
 }
 
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
 .gap-y-6 {
   row-gap: 1.5rem;
 }
@@ -1407,6 +1412,10 @@ video {
     flex-direction: row;
   }
 
+  .sm\:flex-col {
+    flex-direction: column;
+  }
+
   .sm\:flex-wrap {
     flex-wrap: wrap;
   }
@@ -1645,17 +1654,21 @@ video {
               
                 <li class="relative flex gap-x-6 px-4 py-5 sm:px-6">
   <div class="flex items-center gap-x-4">
-    <div class="hidden sm:flex sm:flex-col">
-      <dt class="text-sm font-medium text-gray-500">Server</dt>
-      <dd class="mt-1 text-sm text-gray-900">exchange</dd>
+    <div class="sm:flex sm:flex-col">
+      <div class="flex flex-col">
+        <dt class="text-sm font-medium text-gray-500">Server</dt>
+        <dd class="mt-1 text-sm text-gray-900">exchange</dd>
+      </div>
     </div>
   </div>
 
   
   <div class="flex items-center gap-x-4">
-    <div class="hidden sm:flex sm:flex-col">
-      <dt class="text-sm font-medium text-gray-500">Type</dt>
-      <dd class="mt-1 text-sm text-gray-900">local</dd>
+    <div class="sm:flex sm:flex-col">
+      <div class="flex flex-col">
+        <dt class="text-sm font-medium text-gray-500">Type</dt>
+        <dd class="mt-1 text-sm text-gray-900">local</dd>
+      </div>
     </div>
   </div>
   
@@ -1684,18 +1697,22 @@ video {
 
   
   <div class="flex items-center gap-x-4">
-    <div class="hidden sm:flex sm:flex-col">
-      <dt class="text-sm font-medium text-gray-500">Path</dt>
-      <dd class="mt-1 text-sm text-gray-900">data.csv</dd>
+    <div class="sm:flex sm:flex-col">
+      <div class="flex flex-col">
+        <dt class="text-sm font-medium text-gray-500">Path</dt>
+        <dd class="mt-1 text-sm text-gray-900">data.csv</dd>
+      </div>
     </div>
   </div>
   
 
   
   <div class="flex items-center gap-x-4">
-    <div class="hidden sm:flex sm:flex-col">
-      <dt class="text-sm font-medium text-gray-500">Format</dt>
-      <dd class="mt-1 text-sm text-gray-900">csv</dd>
+    <div class="sm:flex sm:flex-col">
+      <div class="flex flex-col">
+        <dt class="text-sm font-medium text-gray-500">Format</dt>
+        <dd class="mt-1 text-sm text-gray-900">csv</dd>
+      </div>
     </div>
   </div>
   
@@ -1936,7 +1953,7 @@ video {
       </div>
 
       <div class="mt-6 text-sm text-gray-400">
-        Created at 05 Jun 2024 04:39:48 UTC with <a href="https://cli.datacontract.com" class="text-gray-400 hover:text-gray-500">Data Contract CLI</a> v0.10.7
+        Created at 21 Jun 2024 10:20:08 UTC with <a href="https://cli.datacontract.com" class="text-gray-400 hover:text-gray-500">Data Contract CLI</a> v0.10.8
       </div>
 
     </div>
