--- a/examples/orders-latest-nested/datacontract.html
+++ b/examples/orders-latest-nested/datacontract.html
@@ -874,6 +874,11 @@ video {
        column-gap: 1rem;
 }
 
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
 .gap-y-6 {
   row-gap: 1.5rem;
 }
@@ -1405,6 +1410,10 @@ video {
 
   .sm\:flex-row {
     flex-direction: row;
+  }
+
+  .sm\:flex-col {
+    flex-direction: column;
   }
 
   .sm\:flex-wrap {
@@ -2571,7 +2580,7 @@ It is typically associated with an article's barcode, such as the EAN/GTIN.
       </div>
 
       <div class="mt-6 text-sm text-gray-400">
-        Created at 05 Jun 2024 04:39:46 UTC with <a href="https://cli.datacontract.com" class="text-gray-400 hover:text-gray-500">Data Contract CLI</a> v0.10.7
+        Created at 21 Jun 2024 10:20:02 UTC with <a href="https://cli.datacontract.com" class="text-gray-400 hover:text-gray-500">Data Contract CLI</a> v0.10.8
       </div>
 
     </div>
