--- a/examples/index.html
+++ b/examples/index.html
@@ -874,6 +874,11 @@ video {
        column-gap: 1rem;
 }
 
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
 .gap-y-6 {
   row-gap: 1.5rem;
 }
@@ -1407,6 +1412,10 @@ video {
     flex-direction: row;
   }
 
+  .sm\:flex-col {
+    flex-direction: column;
+  }
+
   .sm\:flex-wrap {
     flex-wrap: wrap;
   }
@@ -1807,7 +1816,7 @@ Orders with their line items are in their current state (no history included).
       </div>
 
       <div class="mt-6 text-sm text-gray-400">
-        Created at 05 Jun 2024 04:39:48 UTC with <a href="https://cli.datacontract.com" class="text-gray-400 hover:text-gray-500">Data Contract CLI</a> v0.10.7
+        Created at 21 Jun 2024 10:20:08 UTC with <a href="https://cli.datacontract.com" class="text-gray-400 hover:text-gray-500">Data Contract CLI</a> v0.10.8
       </div>
 
     </div>
