Refactor data contract IDs to remove 'urn:datacontract:checkout:' prefix
Resolves #119

--- a/examples/orders-latest-nested/datacontract.html
+++ b/examples/orders-latest-nested/datacontract.html
@@ -1616,7 +1616,7 @@ video {
             <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">
               Data Contract</h2>
             <div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
-              urn:datacontract:checkout:orders-latest-nested
+              urn:orders-latest-nested
             </div>
             <div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
               
@@ -2693,7 +2693,7 @@ It is typically associated with an article's barcode, such as the EAN/GTIN.
               <h3 class="text-base font-semibold leading-6 text-gray-900" id="modal-title">Data Contract YAML</h3>
             </div>
             <pre class="overflow-x-auto text-sm bg-gray-50 p-4"><code>dataContractSpecification: 0.9.3
-id: urn:datacontract:checkout:orders-latest-nested
+id: urn:orders-latest-nested
 info:
   title: Orders Latest (Nested)
   version: 1.0.0
