--- a/examples/time-example/datacontract.html
+++ b/examples/time-example/datacontract.html
@@ -120,7 +120,7 @@
 
         <h2>Data Contract Details</h2>
         <ul>
-            <li><strong>ID:</strong> urn:datacontract:example:time-demo</li>
+            <li><strong>ID:</strong> time-demo</li>
             <li><strong>Title:</strong> Time Data Type Example</li>
             <li><strong>Version:</strong> 1.0.0</li>
             <li><strong>Owner:</strong> Data Contract Team</li>
