--- a/examples/orders-latest/datacontract.html
+++ b/examples/orders-latest/datacontract.html
@@ -1616,7 +1616,7 @@ video {
             <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">
               Data Contract</h2>
             <div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
-              urn:datacontract:checkout:orders-latest
+              urn:orders-latest
             </div>
             <div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
               
@@ -3023,7 +3023,7 @@ checks for line_items:
               <h3 class="text-base font-semibold leading-6 text-gray-900" id="modal-title">Data Contract YAML</h3>
             </div>
             <pre class="overflow-x-auto text-sm bg-gray-50 p-4"><code>dataContractSpecification: 0.9.3
-id: urn:datacontract:checkout:orders-latest
+id: urn:orders-latest
 info:
   title: Orders Latest
   version: 1.0.0
